kustomization/components/networkpolicy-allow-to-olah/networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-olah-networkpolicy
spec:
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: olah
          podSelector:
            matchLabels:
              app.kubernetes.io/name: olah
      ports:
        - port: web
          protocol: TCP
  podSelector:
    matchLabels:
      hogs.tswn.us/olah-client: "true"
  policyTypes:
    - Egress
